--- a/public/Screens/index2.html
+++ b/public/Screens/index2.html
@@ -32,7 +32,7 @@
             <div id="bigBlock"></div>
             <div id="bigBlock2"></div>
             <div id="bigBlock3"></div>
-            
+            <div id="platform"></div>
             <div id="boundry">
                 <div class="star">
                     <img id="star1" src="../assets/star.png" alt="">
