--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <h1 id ="text">THE RED BALL GAME</h1>   
     </div>
-    <button  class = "button" id="l1" onclick="window.location.href = 'public/Screens/index2.html';">1</button>
+    <button  class = "button" id="l1" >1</button>
         <button  class = "button" id="l2">2</button>
         <button  class = "button" id="l3">3</button>
 </body>
