--- a/public/Screens/index2.html
+++ b/public/Screens/index2.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    
     <div id="canvas1">
         <div id="sky">
 
@@ -71,7 +72,7 @@
     </div>
 
 
-
+    <div id="win_screen"> <img id="won" src="../assets/win_back.jpg" alt=""> </div>
 </body>
 <script src="../components/main2.js"></script>
 
