formatted the code

--- a/public/screens/index2.html
+++ b/public/screens/index2.html
@@ -8,19 +8,13 @@
     <meta name="viewport" content="width=device-width">
     <link rel="icon" type="image/x-icon" href="../public/assets/red ball.jpg">
 
-    <link rel="stylesheet" href="../styles/main2.css">
-    <!-- <style>
-        canvas {
-            border:2px solid black;
-            background-color: #87ceeb;
-        }
-        </style> -->
+    <link rel="stylesheet" href="../styles/level1.css">
 
     <title>Red Ball</title>
 </head>
 
 <body>
-    
+
     <div id="canvas1">
         <div id="sky">
 
@@ -47,8 +41,7 @@
             <img id="dagger" src="../assets/dagger.png" alt="">
         </div>
         <div id="grass">
-                <img id="thorns" src="../assets/thorns.png">
-            <!-- <img id="thorns" src="../assets/thorns.png"> -->
+            <img id="thorns" src="../assets/thorns.png">
             <img id="thorn2" src="../assets/thorns.png">
             <img id="thorn3" src="../assets/thorns.png">
 
@@ -73,6 +66,6 @@
 
     <div id="win_screen"> <img id="won" src="../assets/win_back.jpg" alt=""> </div>
 </body>
-<script src="../components/main2.js"></script>
+<script src="../components/level1.js"></script>
 
 </html>
