--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/styles/main1.css">
+    <link rel="stylesheet" href="public/styles/style1.css">
     <title>Game Page</title>
 </head>
 <body>
@@ -18,5 +18,5 @@
         <button  class = "button" id="l2">2</button>
         <button  class = "button" id="l3">3</button>
 </body>
-<script src="public/components/main1.js"></script>
+<script src="public/components/script1.js"></script>
 </html>
