--- a/public/screens/index3.html
+++ b/public/screens/index3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/main3.css">
+    <link rel="stylesheet" href="../styles/level2.css">
     <title>level 2</title>
 </head>
 <body>
@@ -15,5 +15,5 @@
     <button id = "reset" > RESTART </button>
 </body>
 
-<script type="text/javascript" src="../components/main3.js"></script>
+<script type="text/javascript" src="../components/level2.js"></script>
 </html>
